<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="it.polito.mobile.androidassignment2.timetablestandalone.SearchConsultation">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp">




        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/searchByTeacher"
            android:id="@+id/textView1"
            android:gravity="center"
            android:textColor="#ffff0200"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30px"/>

        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/autoCompleteTextView1"
            android:completionThreshold="1"
            android:hint="@string/teacher"/>


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selectAteacher"
            android:id="@+id/button"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>

</RelativeLayout>
